--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
+<p>我是liyuelian，这是我的个人网站。 </p>
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
 
 <ul>
-  <li> <a href="https://www.cnblogs.com/liyuelian/">我的博客</a> </li>
+  <li> <a href="https://www.cnblogs.com/liyuelian/">我的博客园</a> </li>
+   <li> <a href="https://blog.csdn.net/weixin_45402023?type=blog">我的CSDN账号</a> </li>
+ 
 </ul>
