--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
 
 <ul>
-  <li> <a href="https://www.cnblogs.com/liyuelian/">我的博客园</a> </li>
-   <li> <a href="https://github.com/li-yue-lian">我的GitHub账号</a> </li>
-   <li> <a href="https://blog.csdn.net/weixin_45402023?type=blog">我的CSDN账号</a> </li>
- 
+  <li> <a href="https://www.cnblogs.com/liyuelian/" target="_blank">我的博客园</a> </li>
+  <li> <a href="https://github.com/li-yue-lian" target="_blank">我的GitHub账号</a> </li>
+  <li> <a href="https://blog.csdn.net/weixin_45402023?type=blog" target="_blank">我的CSDN账号</a> </li> 
 </ul>
